Fixed buttons with hover-show always visible

--- a/frontend/shared/scss/components/buttons.scss
+++ b/frontend/shared/scss/components/buttons.scss
@@ -777,7 +777,7 @@
 
             @media (pointer: fine) {
                 position: relative;
-                opacity: 1;
+                //opacity: 1; // this breaks hover-box hover-show behaviour
 
                 &:after {
                     content: "";
